Tooltip horizontal positioning now handled in script to correct for window overflow.

--- a/app/styles/colors/_index.scss
+++ b/app/styles/colors/_index.scss
@@ -31,6 +31,9 @@
     --on-muted: var(--text-light);
     --on-vibrant: var(--text-light);
 
+    --tooltip-surface: var(--background);
+    --on-tooltip-surface: var(--on-background);
+
     accent-color: var(--vibrant);
 }
 
